add support of docker

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
+###################
+# compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.pdb
+*.dll.config
+*.cache
+*.suo
 bin/
+obj/
